lib/miniaudio/miniaudio.auto.c.v


// MA_API ma_result ma_spinlock_lock(volatile ma_spinlock* pSpinlock);
fn C.ma_spinlock_lock(p_spinlock &C.ma_spinlock) Result
[inline]
pub fn spinlock_lock(p_spinlock &C.ma_spinlock) Result {
	return C.ma_spinlock_lock(p_spinlock)
}

// MA_API ma_result ma_spinlock_lock_noyield(volatile ma_spinlock* pSpinlock);
fn C.ma_spinlock_lock_noyield(p_spinlock &C.ma_spinlock) Result
[inline]
pub fn spinlock_lock_noyield(p_spinlock &C.ma_spinlock) Result {
	return C.ma_spinlock_lock_noyield(p_spinlock)
}

// MA_API ma_result ma_spinlock_unlock(volatile ma_spinlock* pSpinlock);
fn C.ma_spinlock_unlock(p_spinlock &C.ma_spinlock) Result
[inline]
pub fn spinlock_unlock(p_spinlock &C.ma_spinlock) Result {
	return C.ma_spinlock_unlock(p_spinlock)
}

// MA_API ma_result ma_mutex_init(ma_mutex* pMutex);
fn C.ma_mutex_init(p_mutex &C.ma_mutex) Result
[inline]
pub fn (mut p_mutex Mutex) init() Result {
	return C.ma_mutex_init(p_mutex)
}

// MA_API void ma_mutex_uninit(ma_mutex* pMutex);
fn C.ma_mutex_uninit(p_mutex &C.ma_mutex)
[inline]
pub fn (mut p_mutex Mutex) uninit() {
	C.ma_mutex_uninit(p_mutex)
}

// MA_API void ma_mutex_lock(ma_mutex* pMutex);
fn C.ma_mutex_lock(p_mutex &C.ma_mutex)
[inline]
pub fn (mut p_mutex Mutex) locking() {
	C.ma_mutex_lock(p_mutex)
}

// MA_API void ma_mutex_unlock(ma_mutex* pMutex);
fn C.ma_mutex_unlock(p_mutex &C.ma_mutex)
[inline]
pub fn (mut p_mutex Mutex) unlock() {
	C.ma_mutex_unlock(p_mutex)
}

// MA_API ma_result ma_event_init(ma_event* pEvent);
fn C.ma_event_init(p_event &C.ma_event) Result
[inline]
pub fn (mut p_event Event) init() Result {
	return C.ma_event_init(p_event)
}

// MA_API void ma_event_uninit(ma_event* pEvent);
fn C.ma_event_uninit(p_event &C.ma_event)
[inline]
pub fn (mut p_event Event) uninit() {
	C.ma_event_uninit(p_event)
}

// MA_API ma_result ma_event_wait(ma_event* pEvent);
fn C.ma_event_wait(p_event &C.ma_event) Result
[inline]
pub fn (mut p_event Event) wait() Result {
	return C.ma_event_wait(p_event)
}

// MA_API ma_result ma_event_signal(ma_event* pEvent);
fn C.ma_event_signal(p_event &C.ma_event) Result
[inline]
pub fn (mut p_event Event) signal() Result {
	return C.ma_event_signal(p_event)
}

// MA_API ma_uint32 ma_scale_buffer_size(ma_uint32 baseBufferSize, float scale);
fn C.ma_scale_buffer_size(base_buffer_size u32, scale f32) u32
[inline]
pub fn scale_buffer_size(base_buffer_size u32, scale f32) u32 {
	return C.ma_scale_buffer_size(base_buffer_size, scale)
}

// MA_API ma_uint32 ma_calculate_buffer_size_in_milliseconds_from_frames(ma_uint32 bufferSizeInFrames, ma_uint32 sampleRate);
fn C.ma_calculate_buffer_size_in_milliseconds_from_frames(buffer_size_in_frames u32, sample_rate u32) u32
[inline]
pub fn calculate_buffer_size_in_milliseconds_from_frames(buffer_size_in_frames u32, sample_rate u32) u32 {
	return C.ma_calculate_buffer_size_in_milliseconds_from_frames(buffer_size_in_frames,
		sample_rate)
}

// MA_API ma_uint32 ma_calculate_buffer_size_in_frames_from_milliseconds(ma_uint32 bufferSizeInMilliseconds, ma_uint32 sampleRate);
fn C.ma_calculate_buffer_size_in_frames_from_milliseconds(buffer_size_in_milliseconds u32, sample_rate u32) u32
[inline]
pub fn calculate_buffer_size_in_frames_from_milliseconds(buffer_size_in_milliseconds u32, sample_rate u32) u32 {
	return C.ma_calculate_buffer_size_in_frames_from_milliseconds(buffer_size_in_milliseconds,
		sample_rate)
}

// MA_API void ma_copy_pcm_frames(void* dst, const void* src, ma_uint64 frameCount, ma_format format, ma_uint32 channels);
fn C.ma_copy_pcm_frames(dst voidptr, src voidptr, frame_count u64, format Format, channels u32)
[inline]
pub fn copy_pcm_frames(dst voidptr, src voidptr, frame_count u64, format Format, channels u32) {
	C.ma_copy_pcm_frames(dst, src, frame_count, format, channels)
}

// MA_API void ma_silence_pcm_frames(void* p, ma_uint64 frameCount, ma_format format, ma_uint32 channels);
fn C.ma_silence_pcm_frames(p voidptr, frame_count u64, format Format, channels u32)
[inline]
pub fn silence_pcm_frames(p voidptr, frame_count u64, format Format, channels u32) {
	C.ma_silence_pcm_frames(p, frame_count, format, channels)
}

// MA_API void* ma_offset_pcm_frames_ptr(void* p, ma_uint64 offsetInFrames, ma_format format, ma_uint32 channels);
fn C.ma_offset_pcm_frames_ptr(p voidptr, offset_in_frames u64, format Format, channels u32) voidptr
[inline]
pub fn offset_pcm_frames_ptr(p voidptr, offset_in_frames u64, format Format, channels u32) voidptr {
	return C.ma_offset_pcm_frames_ptr(p, offset_in_frames, format, channels)
}

// MA_API const void* ma_offset_pcm_frames_const_ptr(const void* p, ma_uint64 offsetInFrames, ma_format format, ma_uint32 channels);
fn C.ma_offset_pcm_frames_const_ptr(p voidptr, offset_in_frames u64, format Format, channels u32) voidptr
[inline]
pub fn offset_pcm_frames_const_ptr(p voidptr, offset_in_frames u64, format Format, channels u32) voidptr {
	return C.ma_offset_pcm_frames_const_ptr(p, offset_in_frames, format, channels)
}

// MA_API void ma_clip_samples_f32(float* p, ma_uint64 sampleCount);
fn C.ma_clip_samples_f32(p &f32, sample_count u64)
[inline]
pub fn clip_samples_f32(p &f32, sample_count u64) {
	C.ma_clip_samples_f32(p, sample_count)
}

// MA_API void ma_copy_and_apply_volume_factor_u8(ma_uint8* pSamplesOut, const ma_uint8* pSamplesIn, ma_uint64 sampleCount, float factor);
fn C.ma_copy_and_apply_volume_factor_u8(p_samples_out &C.ma_uint8, p_samples_in &C.ma_uint8, sample_count u64, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_u8(p_samples_out &C.ma_uint8, p_samples_in &C.ma_uint8, sample_count u64, factor f32) {
	C.ma_copy_and_apply_volume_factor_u8(p_samples_out, p_samples_in, sample_count, factor)
}

// MA_API void ma_copy_and_apply_volume_factor_s16(ma_int16* pSamplesOut, const ma_int16* pSamplesIn, ma_uint64 sampleCount, float factor);
fn C.ma_copy_and_apply_volume_factor_s16(p_samples_out &C.ma_int16, p_samples_in &C.ma_int16, sample_count u64, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_s16(p_samples_out &C.ma_int16, p_samples_in &C.ma_int16, sample_count u64, factor f32) {
	C.ma_copy_and_apply_volume_factor_s16(p_samples_out, p_samples_in, sample_count, factor)
}

// MA_API void ma_copy_and_apply_volume_factor_s24(void* pSamplesOut, const void* pSamplesIn, ma_uint64 sampleCount, float factor);
fn C.ma_copy_and_apply_volume_factor_s24(p_samples_out voidptr, p_samples_in voidptr, sample_count u64, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_s24(p_samples_out voidptr, p_samples_in voidptr, sample_count u64, factor f32) {
	C.ma_copy_and_apply_volume_factor_s24(p_samples_out, p_samples_in, sample_count, factor)
}

// MA_API void ma_copy_and_apply_volume_factor_s32(ma_int32* pSamplesOut, const ma_int32* pSamplesIn, ma_uint64 sampleCount, float factor);
fn C.ma_copy_and_apply_volume_factor_s32(p_samples_out &int, p_samples_in &int, sample_count u64, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_s32(p_samples_out &int, p_samples_in &int, sample_count u64, factor f32) {
	C.ma_copy_and_apply_volume_factor_s32(p_samples_out, p_samples_in, sample_count, factor)
}

// MA_API void ma_copy_and_apply_volume_factor_f32(float* pSamplesOut, const float* pSamplesIn, ma_uint64 sampleCount, float factor);
fn C.ma_copy_and_apply_volume_factor_f32(p_samples_out &f32, p_samples_in &f32, sample_count u64, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_f32(p_samples_out &f32, p_samples_in &f32, sample_count u64, factor f32) {
	C.ma_copy_and_apply_volume_factor_f32(p_samples_out, p_samples_in, sample_count, factor)
}

// MA_API void ma_apply_volume_factor_u8(ma_uint8* pSamples, ma_uint64 sampleCount, float factor);
fn C.ma_apply_volume_factor_u8(p_samples &C.ma_uint8, sample_count u64, factor f32)
[inline]
pub fn apply_volume_factor_u8(p_samples &C.ma_uint8, sample_count u64, factor f32) {
	C.ma_apply_volume_factor_u8(p_samples, sample_count, factor)
}

// MA_API void ma_apply_volume_factor_s16(ma_int16* pSamples, ma_uint64 sampleCount, float factor);
fn C.ma_apply_volume_factor_s16(p_samples &C.ma_int16, sample_count u64, factor f32)
[inline]
pub fn apply_volume_factor_s16(p_samples &C.ma_int16, sample_count u64, factor f32) {
	C.ma_apply_volume_factor_s16(p_samples, sample_count, factor)
}

// MA_API void ma_apply_volume_factor_s24(void* pSamples, ma_uint64 sampleCount, float factor);
fn C.ma_apply_volume_factor_s24(p_samples voidptr, sample_count u64, factor f32)
[inline]
pub fn apply_volume_factor_s24(p_samples voidptr, sample_count u64, factor f32) {
	C.ma_apply_volume_factor_s24(p_samples, sample_count, factor)
}

// MA_API void ma_apply_volume_factor_s32(ma_int32* pSamples, ma_uint64 sampleCount, float factor);
fn C.ma_apply_volume_factor_s32(p_samples &int, sample_count u64, factor f32)
[inline]
pub fn apply_volume_factor_s32(p_samples &int, sample_count u64, factor f32) {
	C.ma_apply_volume_factor_s32(p_samples, sample_count, factor)
}

// MA_API void ma_apply_volume_factor_f32(float* pSamples, ma_uint64 sampleCount, float factor);
fn C.ma_apply_volume_factor_f32(p_samples &f32, sample_count u64, factor f32)
[inline]
pub fn apply_volume_factor_f32(p_samples &f32, sample_count u64, factor f32) {
	C.ma_apply_volume_factor_f32(p_samples, sample_count, factor)
}

// MA_API void ma_copy_and_apply_volume_factor_pcm_frames_u8(ma_uint8* pPCMFramesOut, const ma_uint8* pPCMFramesIn, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_copy_and_apply_volume_factor_pcm_frames_u8(p_p_c_m_frames_out &C.ma_uint8, p_p_c_m_frames_in &C.ma_uint8, frame_count u64, channels u32, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_pcm_frames_u8(p_p_c_m_frames_out &C.ma_uint8, p_p_c_m_frames_in &C.ma_uint8, frame_count u64, channels u32, factor f32) {
	C.ma_copy_and_apply_volume_factor_pcm_frames_u8(p_p_c_m_frames_out, p_p_c_m_frames_in,
		frame_count, channels, factor)
}

// MA_API void ma_copy_and_apply_volume_factor_pcm_frames_s16(ma_int16* pPCMFramesOut, const ma_int16* pPCMFramesIn, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_copy_and_apply_volume_factor_pcm_frames_s16(p_p_c_m_frames_out &C.ma_int16, p_p_c_m_frames_in &C.ma_int16, frame_count u64, channels u32, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_pcm_frames_s16(p_p_c_m_frames_out &C.ma_int16, p_p_c_m_frames_in &C.ma_int16, frame_count u64, channels u32, factor f32) {
	C.ma_copy_and_apply_volume_factor_pcm_frames_s16(p_p_c_m_frames_out, p_p_c_m_frames_in,
		frame_count, channels, factor)
}

// MA_API void ma_copy_and_apply_volume_factor_pcm_frames_s24(void* pPCMFramesOut, const void* pPCMFramesIn, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_copy_and_apply_volume_factor_pcm_frames_s24(p_p_c_m_frames_out voidptr, p_p_c_m_frames_in voidptr, frame_count u64, channels u32, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_pcm_frames_s24(p_p_c_m_frames_out voidptr, p_p_c_m_frames_in voidptr, frame_count u64, channels u32, factor f32) {
	C.ma_copy_and_apply_volume_factor_pcm_frames_s24(p_p_c_m_frames_out, p_p_c_m_frames_in,
		frame_count, channels, factor)
}

// MA_API void ma_copy_and_apply_volume_factor_pcm_frames_s32(ma_int32* pPCMFramesOut, const ma_int32* pPCMFramesIn, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_copy_and_apply_volume_factor_pcm_frames_s32(p_p_c_m_frames_out &int, p_p_c_m_frames_in &int, frame_count u64, channels u32, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_pcm_frames_s32(p_p_c_m_frames_out &int, p_p_c_m_frames_in &int, frame_count u64, channels u32, factor f32) {
	C.ma_copy_and_apply_volume_factor_pcm_frames_s32(p_p_c_m_frames_out, p_p_c_m_frames_in,
		frame_count, channels, factor)
}
